- Fix bugs with increase of non-latin fonts (reported by JDD annd Scott
  Youngman).
- Fix cornercase bug in RTL handler (reported by Fonzo99).
- Upgrade to latest version of libraries (PyQt, Python, Matplolib).
- Improve keyboard shortcuts (reported by Scott Youngman).
- Also save window size when exiting window by pressing escape (reported by
  Scott Youngman).
- Disallow renaming a single tag to multiple tags in the tag tree widget.
  (reported by abacus).
- In case you get crashes in the browser when trying to display only untagged
  cards, you can now run 'File - Compact - Defragment database' to fix this
  (reported by abacus).
- Fix crash in headless server.
- Fix crashes when running separate scripts (patch by Julian Mehne).


Mnemosyne 2.5 : 2017-06-26

-New feature: Study Modes, allowing you to e.g. only study unlearned
 cards. The Cramming scheduler is also migrated to this functionality.
-Added option to "Configure Mnemosyne" to affect how cards are displayed,
 in two boxes with fixed size, two boxes with adaptive size, or a single
 box top aligned.
-Tweaks to tag combobox (Emilian Mihalache).
-Updated to PyQt 5.8.2.
-Scaling for high-definition displays now enabled by default.
 (start with --disable-high-dpi-scaling if you prefer the previous behaviour).
-Fix crash when deleting unused media files (reported by gorgar).
-Small performance optimisations in the database.
-Fix crash in configuration widget under Linux with some fonts (e.g. Google
 Noto fonts) (fix by m4984).
-Fix crash when selecting negative tags (reported by 2a216566f1).
-Fix keyboard shortcuts not working sometimes (reported by Angelika Blaschka).
-Improved compatibility with different Qt versions under Linux
 (reported by Huang Shuhan).
-When setting the fonts for all the card types at once, the dialog will now
 correctly remember the setting (reported by 2a216566f1).
-Added warning if OpenGL libraries are missing under Linux
 (Andy Rayner).